--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=1280,Y=690)
+NewWindowPosition=(X=1507,Y=403)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -124,15 +124,15 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1367,Y=1300)
+LastSize=(X=1424,Y=1680)
 LastExecutedLaunchDevice=Windows@PATI-PC
 LastExecutedLaunchName=PATI-PC
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1367
-NewWindowHeight=1300
-MultipleInstancePositions=(X=1280,Y=690)
+NewWindowWidth=1424
+NewWindowHeight=1680
+MultipleInstancePositions=(X=1507,Y=403)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -239,9 +239,11 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -848,13 +850,13 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent=
 Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
+BP_ThirdPersonCharacter_C=
+Character=
+Pawn=
 
 [MessageLog]
 LastLogListing=PIE
@@ -2076,6 +2078,12 @@ AnimationCurveGroupingDelimiters="._/|\\"
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 SkeletalMeshComponent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 CharacterMovementComponent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+PropertyWrapper=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+K2Node_VariableGet=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+EdGraphNode_Comment=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+K2Node_EnhancedInputAction=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+K2Node_VariableSet=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+EdGraphNode=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
